gobmkida/c2/routine_to_string
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/routine_to_string/src/engine/printutils.c:837:8: error: use of undeclared identifier 'off_4966A0'
return off_4966A0[routine]; 
       ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/routine_to_string/src/obj/1/printutils.o] Error 1
